kubernetes/008-prod/003-backend.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
    app.quarkus.io/quarkus-version: 3.16.3
    app.quarkus.io/vcs-uri: https://github.com/Fenrur/template.git
  labels:
    app.kubernetes.io/name: template-backend
    app.kubernetes.io/managed-by: quarkus
  name: template-backend
  namespace: prod
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: template-backend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
    app.quarkus.io/quarkus-version: 3.16.3
    app.quarkus.io/vcs-uri: https://github.com/Fenrur/template.git
  labels:
    app.kubernetes.io/name: template-backend
    app.kubernetes.io/managed-by: quarkus
  name: template-backend
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: template-backend
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
        app.quarkus.io/quarkus-version: 3.16.3
        app.quarkus.io/vcs-uri: https://github.com/Fenrur/template.git
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.kubernetes.io/name: template-backend
      namespace: prod
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: QUARKUS_FLYWAY_ENABLED
              value: "false"
            - name: DATABASE_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: pg-cluster-app
            - name: DATABASE_USER
              valueFrom:
                secretKeyRef:
                  key: user
                  name: pg-cluster-app
            - name: DATABASE_URL
              valueFrom:
                secretKeyRef:
                  key: jdbc-uri
                  name: pg-cluster-app
          image: ghcr.io/fenrur/template/template-backend:1.4.4
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: template-backend
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 64Mi
          startupProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/started
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
      imagePullSecrets:
        - name: ghcr
      serviceAccountName: template-backend
