kubernetes/008-prod/004-backend-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-backend
  namespace: prod
spec:
  parentRefs:
    - name: gateway
      sectionName: https
      namespace: istio-ingress
  hostnames:
    - api.template.tinnirello-livio.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: template-backend
          port: 80
