kubernetes/008-prod/006-frontend-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-frontend
  namespace: prod
spec:
  parentRefs:
    - name: gateway
      sectionName: https
      namespace: istio-ingress
  hostnames:
    - www.template.tinnirello-livio.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: template-frontend
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-frontend-base
  namespace: prod
spec:
  parentRefs:
    - name: gateway
      sectionName: https-base
      namespace: istio-ingress
  hostnames:
    - template.tinnirello-livio.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: template-frontend
          port: 80
